[metadata]
name = TreasurPy
version = 0.0.1
author = Nicholas Saros
author_email = nicksaros07@gmail.com
description = Python Wrapper for using the US Fiscal Data API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sarosnicholas1/US-FD-TreasurPy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True